syntax = "proto3";

option go_package = "moviesapp/v1";
import "google/protobuf/timestamp.proto";
import "google/api/annotations.proto";

package moviesappv1;


message Empty {}

message Movie {
  string isbn = 1;
  string title = 2;
  string director = 3;
  string genre = 4;
  float rating = 5;
  google.protobuf.Timestamp created_at = 6;
  google.protobuf.Timestamp updated_at = 7;
}

message CreateMovieRequest {
  string isbn = 1;
  string title = 2;
  string director = 3;
  string genre = 4;
  float rating = 5;
}

message UpdateMovieRequest {
  string isbn = 1;
  string title = 2;
  string director = 3;
  string genre = 4;
  float rating = 5;
}


message GetMovieRequest {
  string isbn = 1;
}

message DeleteMovieRequest {
  string isbn = 1;
}

message Status {
  bool success = 1;
  string isbn = 2;
}

service MovieService {
    rpc GetMovies (Empty) returns (stream Movie) {
        option (google.api.http) = {
                    get: "/get_movies"
                };
        };
    rpc GetMovieById (GetMovieRequest) returns (Movie) {
        option (google.api.http) = {
                    get: "/get_movies/{isbn}"
                };
        };
    rpc CreateMovie (CreateMovieRequest) returns (Movie) {
        option (google.api.http) = {
                    post: "/add_movie"
                    body: "*"
                };
    };
    rpc UpdateMovie (UpdateMovieRequest) returns (Movie) {
        option (google.api.http) = {
                    patch: "/update_movie"
                    body: "*"
                };
    };       
    rpc DeleteMovie (DeleteMovieRequest) returns (Status) {
        option (google.api.http) = {
                    delete: "/delete_movie/{isbn}"
                };
        };
}

